update - update grid try to fix alignment issue

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ nav a {
 
 /* Ensure groups have a minimum height */
 .vis-group {
-  min-height: 60px;
+  /*min-height: 60px;*/
   padding: 5px;
 }
 
